--- a/PFD_Assignment/appsettings.json
+++ b/PFD_Assignment/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SGHandbookConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SGHandbook;Integrated Security=True;"
+  }/*, ill fill it ltr
+
+  "Authentication": {
+    "Google": {
+      "ClientId": "--",
+      "ClientSecret": "--"
+  }*/
 }
+
