connected to DB and set up dal (the continuation of a new error)

--- a/PFD_Assignment/appsettings.json
+++ b/PFD_Assignment/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SGHandbookConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SGHandbook;Integrated Security=True;"
+  }
 }
