--- a/EnvironmentsSample/EnvironmentsSample.csproj
+++ b/EnvironmentsSample/EnvironmentsSample.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>96632790-8775-418f-ae07-f86dbe9edfed</UserSecretsId>
   </PropertyGroup>
 
 </Project>
