delete featured post wip

--- a/PFD_Assignment/appsettings.json
+++ b/PFD_Assignment/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SGHandbookConnectionString": "Data Source=pfdasg.database.windows.net;Initial Catalog=SGHandbook;Integrated Security=False;User Id=kaiquan;Password=MFJafbX#PJ9UQ@pFe;MultipleActiveResultSets=True"
+    "SGHandbookConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SGHandbook;Integrated Security=True;"
   }/*, ill fill it ltr
 
   "Authentication": {
