--- a/PFD_Assignment/appsettings.json
+++ b/PFD_Assignment/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    
-    "SGHandbookConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SGHandbook;Integrated Security=True;"
+    "SGHandbookConnectionString": "Data Source=pfdasg.database.windows.net;Initial Catalog=SGHandbook;Integrated Security=False;User Id=kaiquan;Password=P1jSM81IO9WPa8I;MultipleActiveResultSets=True"
   }/*, ill fill it ltr
 
   "Authentication": {
